# water-timeseries-v2

./: .gitignore  Dockerfile  LICENSE  README.md  diagnose_netcdf.py  docker-compose.yaml  download_job.py  download_test.py  latestDockerfile  mkdocs.yml  preprocess_data.py  pyproject.toml  scratch_check_geom.py  scratch_check_geom2.py
.github/workflows/: docs.yml  ruff.yml  test.yml  update_version.yml
.streamlit/: config.toml
argo_workflows/: README.md  water_timeseries.yaml
argo_workflows/storage/: filestore-pv.yaml  filestore-pvc.yaml  multi-pvc-inspectors.yaml
argo_workflows/utils/: download.yaml  upload.yaml
benchmarks/: bench_real_parquet.py
configs/: config.yaml
docs/: DOCUMENTATION_SETUP.md  Makefile  conf.py  embedding.md  examples.md  getting_started.md  index.md  index.rst  requirements.txt
docs/api/: breakpoint.md  dataset.md  index.md  index.rst  utils.md
embed/: README.md  water-timeseries-embed.js
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  dashboard-deployment.yaml  dashboard-service.yaml  deployment.yaml  ingress.yaml  pmtiles-deployment.yaml  pmtiles-service.yaml  pvc.yaml  (+1 more)
notebooks/: 01_download_data.ipynb  02_dataset_and_plotting.ipynb  03_breakpoints_introduction.ipynb  04_near-real-time-pipeline.ipynb  05_near-real-time-pipeline_gridded.ipynb
tests/: README.md  __init__.py  conftest.py  test_break_pipeline.py  test_breakpoints.py  test_dashboard.py  test_downloader.py  test_loading.py  test_normalization.py  test_nrt_test_data.py  test_plotting.py  test_pmtiles.py  test_repartition.py  test_share_state.py
(+168 files in other folders)
