[project]
name = "water-timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ingmar Nitze", email = "ingmarnitze@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "eemont>=2025.7.1",
    "geemap>=0.37.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "ray[default]>=2.54.0",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xarray>=2026.2.0",
]

[project.scripts]
water-timeseries = "water_timeseries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
